ant-phone 0.1.13, 2007-04-29, Roland Stigge <stigge@antcom.de>
	* Included Italian translation

ant-phone 0.1.12, 2006-04-18, Roland Stigge <stigge@antcom.de>
	* Updated Swedish translation

ant-phone 0.1.11, 2005-11-29, Roland Stigge <stigge@antcom.de>
	* Added Swedish, Turkish and Vietnamese translations

ant-phone 0.1.10, 2004-01-09, Roland Stigge <stigge@antcom.de>
	* src/session.c: Added debug messages to gtk_handle_isdn_input
	* Updated po/fr.po

ant-phone 0.1.9, 2004-01-09, Roland Stigge <stigge@antcom.de>
	* README: Added reference to mailing list and archives
	* Updated po/fr.po

ant-phone 0.1.8, 2003-11-18, Roland Stigge <stigge@antcom.de>
	* src/isdn.h: Fixed ISDN_CONFIG_FILENAME to be /etc/isdn/isdn.conf
	* src/callerid.c: Fixed segfault in cid_calls_merge()

ant-phone 0.1.7, 2003-10-31, Roland Stigge <stigge@antcom.de>
	* Updated po/nl.po

ant-phone 0.1.6, 2003-10-01, Roland Stigge <stigge@antcom.de>
	* Fixed yyloc compile warning, updating flex and bison source for
	  options and callerid (solves parsers location issue)
	* Applied SuSE (Opteron, ...) porting patches, thanks to
	  Philipp Thomas <pthomas@suse.de>:
	    ant-phone-codecleanup.diff
	    ant-phone-gettext_version.diff
	    ant-phone-isdn_log_name.diff
	    ant-phone-makefile.diff
	* Adjusted to automake-1.7
	* Added lexer/parser for isdnformat(5) to get name of calls file
	  from i4l config file
	* Obsoleted optionslexer in favour of isdnparser (nearly same format)
	  to conform rc file to isdnformat(5)
	* Added ro.po translation file (Romanian)

ant-phone 0.1.5, 2003-07-30, Roland Stigge <stigge@antcom.de>
	* Fixed bad codeset (UTF-8) in localized command line output
	* Updated po/fr.po
	* Fixed bug in resampling code for playback
	* Added xpm icons in src/: 16x16, 32x32, 48x48, 64x64
	* Added auto detection between /var/lib/isdn/calls and
	  /var/log/isdn/calls as input file for callerid history

ant-phone 0.1.4, 2003-07-06, Roland Stigge <stigge@antcom.de>