@@ -4,6 +4,7 @@
  * This file is part of ANT (Ant is Not a Telephone)
  *
  * Copyright 2002, 2003 Roland Stigge
+ * Copyright 2007 Ivan Schreter
  *
  * ANT is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -24,7 +25,32 @@
 /* own header files */
 #include "session.h"
 
+/*!
+ * @brief Create a dialog window with a (big) label and an ok button to close.
+ *
+ * This is primarily good for displaying a note to the user.
+ *
+ * @note Caller has to show the window himself with gtk_widget_show()
+ *       and maybe want to make it modal with
+ *       gtk_window_set_modal(GTK_WINDOW(window), TRUE).
+ *
+ * @param title dialog title.
+ * @param contents message to display.
+ * @param justification justification of label (e.g. GTK_JUSTIFY_LEFT).
+ * @return newly-created dialog (caller has to free it).
+ */
 GtkWidget *ok_dialog_get(char *title, char *contents,
 			 GtkJustification justification);
+
+/*!
+ * @brief Display a note about audio devices not available.
+ */
 void show_audio_error_dialog(void);
+
+/*!
+ * @brief Main function for gtk GUI.
+ *
+ * @param session session to run.
+ * @return int to be returned from main().
+ */
 int main_gtk(session_t *session);
