@@ -1,3 +1,15 @@
+ant-phone 0.2.0, 2007-11-25, Ivan Schreter <schreter@gmx.net>
+	* Re-work of session handling to use sound and ISDN threads, which
+          greatly reduces latency and CPU usage
+	* Complete re-work of ISDN subsystem to use CAPI 2.0
+	* Complete re-work of sound subsystem to use ALSA
+	* Re-work of recording subsystem to produce better results
+	* Re-work of debug and error message handling (centralized)
+	* Add tray icon and minimize to tray instead of close
+	* Added --sleep and --wakeup remote commands to facilitate release
+	  and re-acquire of CAPI connection
+	* Code documentation (partial)
+
 ant-phone 0.1.13, 2007-04-29, Roland Stigge <stigge@antcom.de>
 	* Included Italian translation
 
